assets/sass/components/headings.scss
@use '../base/variables' as v;
@use '../base/mixins' as m;

.heading--h1 {
    color: v.$text-color;
    font-size: 50px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;

    @include m.mq(large) {
        font-size: 50px;
    }
    
    @include m.mq(small) {
        font-size: 32px;
    }
}

.main-heading {
    white-space: break-spaces;
}

.heading--h2 {
    color: v.$text-color;
    font-size: 35px;
    font-style: normal;
    font-weight: 700;
    line-height: normal; 
}

h2,
.heading--h2,
.heading--h3 {
    position: relative;

    &::after {
        content: '';
        display: block;
        position: absolute;
        bottom: -0.25rem;
        left: 0;
        width: 100px;
        height: 4px;
        border-radius: 2px;
        background-color: v.$primary;
    }
}

